--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "2.6.6",
+  "version": "3.0.0",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "scripts": {
     "start": "node ./index.js",
@@ -23,8 +23,7 @@
     "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
-      "auth0-extension-hapi-tools@1.3.1",
-      "auth0-extension-tools@1.4.0",
+      "auth0-extension-tools@1.5.2",
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
@@ -37,16 +36,16 @@
       "ejs@2.3.1",
       "express-jwt@3.1.0",
       "express@4.12.4",
-      "hapi-auth-jwt2@7.0.1",
-      "@hapi/hapi@21.3.12",
+      "hapi-auth-jwt2@10.5.1",
+      "@hapi/hapi@21.3.3",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
-      "@hapi/inert@7.0.1",
+      "@hapi/inert@7.1.0",
       "jade@1.10.0",
-      "@hapi/joi@17.17.1",
-      "jsonwebtoken@7.1.9",
-      "jwks-rsa@1.1.1",
-      "lodash@3.10.1",
+      "@hapi/joi@17.1.1",
+      "jsonwebtoken@9.0.0",
+      "jwks-rsa@3.0.1",
+      "lodash@4.17.21",
       "lru-cache@2.6.4",
       "lru-memoizer@1.10.0",
       "mime-db@1.10.0",
@@ -60,31 +59,34 @@
       "qs@3.1.0",
       "raw-body@2.1.0",
       "read-all-stream@2.1.2",
-      "request@2.81.0",
+      "request@2.88.2",
       "superagent@1.2.0",
       "type-check@0.3.1",
-      "webtask-tools",
-      "winston@1.0.0",
-      "xml2js@0.4.8"
+      "webtask-tools@3.4.1",
+      "winston@3.10.0",
+      "xml2js@0.4.8",
+      "@hapi/boom@10.0.1",
+      "superagent@8.0.9"
     ]
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.12",
+    "@hapi/boom": "^10.0.1",
+    "@hapi/hapi": "21.3.3",
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
+    "@ngrok/ngrok": "^1.4.1",
     "auth0": "2.27.1",
-    "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.4.0",
-    "boom": "3.2.2",
-    "hapi-auth-jwt2": "^11.0.0",
+    "auth0-extension-tools": "^1.5.2",
+    "hapi-auth-jwt2": "10.5.1",
     "jsonwebtoken": "9.0.0",
-    "jwks-rsa": "1.1.1",
-    "lodash": "^3.10.1",
+    "jwks-rsa": "3.0.1",
+    "lodash": "4.17.21",
     "nconf": "0.11.4",
     "open": "^0.0.5",
-    "request": "^2.81.0",
-    "webtask-tools": "^3.2.0",
-    "winston": "1.0.0"
+    "request": "2.88.2",
+    "superagent": "8.0.9",
+    "webtask-tools": "^3.4.1",
+    "winston": "3.10.0"
   },
   "devDependencies": {
     "auth0-extensions-cli": "^4.0.4",
@@ -100,9 +102,9 @@
     "gulp-util": "^3.0.8",
     "minifier": "^0.8.1",
     "mocha": "^3.5.0",
-    "ngrok": "^4.3.3",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
-    "puppeteer": "^24.2.0"
+    "puppeteer": "^24.2.0",
+    "sinon": "^19.0.2"
   }
 }
